bindings/java/src/main/java/whiteout/mpq/internal/Native.java

// SPDX-License-Identifier: BSD-3-Clause
// AUTOGENERATED by tools/codegen/emit_java.py - do not edit.
package whiteout.mpq.internal;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import whiteout.common.internal.NativeCommon;

/** FFM MethodHandle registry for this module. Internal — for codegen use. */
public final class Native {
    private Native() {}

    public static final MemoryLayout BYTES_LAYOUT = NativeCommon.BYTES_LAYOUT;
    public static final MemoryLayout CSTRING_LAYOUT = NativeCommon.CSTRING_LAYOUT;
    public static final MethodHandle whiteout_Bytes_free = NativeCommon.whiteout_Bytes_free;
    public static final MethodHandle whiteout_CString_free = NativeCommon.whiteout_CString_free;

    static MethodHandle find(String name, FunctionDescriptor fd) {
        return NativeCommon.find(name, fd);
    }

    public static final MethodHandle whiteout_mpq_StringList_size = find(
        "whiteout_mpq_StringList_size", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_StringList_at = find(
        "whiteout_mpq_StringList_at", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mpq_StringList_delete = find(
        "whiteout_mpq_StringList_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

    // -- MpqFileInfo --
    public static final MethodHandle whiteout_mpq_MpqFileInfo_new = find(
        "whiteout_mpq_MpqFileInfo_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqFileInfo_delete = find(
        "whiteout_mpq_MpqFileInfo_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqFileInfo_get_name = find("whiteout_mpq_MpqFileInfo_get_name", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqFileInfo_set_name = find("whiteout_mpq_MpqFileInfo_set_name", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqFileInfo_get_compressedSize = find("whiteout_mpq_MpqFileInfo_get_compressedSize", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqFileInfo_set_compressedSize = find("whiteout_mpq_MpqFileInfo_set_compressedSize", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mpq_MpqFileInfo_get_uncompressedSize = find("whiteout_mpq_MpqFileInfo_get_uncompressedSize", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqFileInfo_set_uncompressedSize = find("whiteout_mpq_MpqFileInfo_set_uncompressedSize", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mpq_MpqFileInfo_get_flags = find("whiteout_mpq_MpqFileInfo_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqFileInfo_set_flags = find("whiteout_mpq_MpqFileInfo_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mpq_MpqFileInfo_get_locale = find("whiteout_mpq_MpqFileInfo_get_locale", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqFileInfo_set_locale = find("whiteout_mpq_MpqFileInfo_set_locale", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));

    // -- MpqArchiveInfo --
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_new = find(
        "whiteout_mpq_MpqArchiveInfo_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_delete = find(
        "whiteout_mpq_MpqArchiveInfo_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_get_formatVersion = find("whiteout_mpq_MpqArchiveInfo_get_formatVersion", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_set_formatVersion = find("whiteout_mpq_MpqArchiveInfo_set_formatVersion", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_get_hashTableEntries = find("whiteout_mpq_MpqArchiveInfo_get_hashTableEntries", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_set_hashTableEntries = find("whiteout_mpq_MpqArchiveInfo_set_hashTableEntries", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_get_blockTableEntries = find("whiteout_mpq_MpqArchiveInfo_get_blockTableEntries", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_set_blockTableEntries = find("whiteout_mpq_MpqArchiveInfo_set_blockTableEntries", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_get_sectorSize = find("whiteout_mpq_MpqArchiveInfo_get_sectorSize", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_set_sectorSize = find("whiteout_mpq_MpqArchiveInfo_set_sectorSize", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_get_archiveSize = find("whiteout_mpq_MpqArchiveInfo_get_archiveSize", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqArchiveInfo_set_archiveSize = find("whiteout_mpq_MpqArchiveInfo_set_archiveSize", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));

    // -- MpqWriteOptions --
    public static final MethodHandle whiteout_mpq_MpqWriteOptions_new = find(
        "whiteout_mpq_MpqWriteOptions_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqWriteOptions_delete = find(
        "whiteout_mpq_MpqWriteOptions_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqWriteOptions_get_compression = find("whiteout_mpq_MpqWriteOptions_get_compression", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqWriteOptions_set_compression = find("whiteout_mpq_MpqWriteOptions_set_compression", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mpq_MpqWriteOptions_get_locale = find("whiteout_mpq_MpqWriteOptions_get_locale", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqWriteOptions_set_locale = find("whiteout_mpq_MpqWriteOptions_set_locale", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_mpq_MpqWriteOptions_get_encrypt = find("whiteout_mpq_MpqWriteOptions_get_encrypt", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqWriteOptions_set_encrypt = find("whiteout_mpq_MpqWriteOptions_set_encrypt", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mpq_MpqWriteOptions_get_singleUnit = find("whiteout_mpq_MpqWriteOptions_get_singleUnit", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqWriteOptions_set_singleUnit = find("whiteout_mpq_MpqWriteOptions_set_singleUnit", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- MpqCreateOptions --
    public static final MethodHandle whiteout_mpq_MpqCreateOptions_new = find(
        "whiteout_mpq_MpqCreateOptions_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqCreateOptions_delete = find(
        "whiteout_mpq_MpqCreateOptions_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqCreateOptions_get_version = find("whiteout_mpq_MpqCreateOptions_get_version", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqCreateOptions_set_version = find("whiteout_mpq_MpqCreateOptions_set_version", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mpq_MpqCreateOptions_get_hashTableSize = find("whiteout_mpq_MpqCreateOptions_get_hashTableSize", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqCreateOptions_set_hashTableSize = find("whiteout_mpq_MpqCreateOptions_set_hashTableSize", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mpq_MpqCreateOptions_get_sectorSizeShift = find("whiteout_mpq_MpqCreateOptions_get_sectorSizeShift", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqCreateOptions_set_sectorSizeShift = find("whiteout_mpq_MpqCreateOptions_set_sectorSizeShift", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));

    // -- MpqStorage --
    public static final MethodHandle whiteout_mpq_MpqStorage_delete = find(
        "whiteout_mpq_MpqStorage_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_open = find(
        "whiteout_mpq_MpqStorage_open", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_create = find(
        "whiteout_mpq_MpqStorage_create", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_readFile = find(
        "whiteout_mpq_MpqStorage_readFile", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_readFile_name_locale = find(
        "whiteout_mpq_MpqStorage_readFile_name_locale", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_mpq_MpqStorage_fileExists = find(
        "whiteout_mpq_MpqStorage_fileExists", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_fileInfo = find(
        "whiteout_mpq_MpqStorage_fileInfo", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_archiveInfo = find(
        "whiteout_mpq_MpqStorage_archiveInfo", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_listFiles_count = find(
        "whiteout_mpq_MpqStorage_listFiles_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_listFiles_at = find(
        "whiteout_mpq_MpqStorage_listFiles_at", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mpq_MpqStorage_listFiles = find(
        "whiteout_mpq_MpqStorage_listFiles", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_writeFile = find(
        "whiteout_mpq_MpqStorage_writeFile", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_deleteFile = find(
        "whiteout_mpq_MpqStorage_deleteFile", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_save = find(
        "whiteout_mpq_MpqStorage_save", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqStorage_save_path = find(
        "whiteout_mpq_MpqStorage_save_path", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- MpqFileSystem --
    public static final MethodHandle whiteout_mpq_MpqFileSystem_new_storage = find(
        "whiteout_mpq_MpqFileSystem_new_storage", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqFileSystem_delete = find(
        "whiteout_mpq_MpqFileSystem_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqFileSystem_readFile = find(
        "whiteout_mpq_MpqFileSystem_readFile", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mpq_MpqFileSystem_writeFile = find(
        "whiteout_mpq_MpqFileSystem_writeFile", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mpq_MpqFileSystem_fileExists = find(
        "whiteout_mpq_MpqFileSystem_fileExists", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

}
